Fix deprecated warnings on URL constructor.